# da-labs

./: .gitignore  CMakeLists.txt
cp/: CMakeLists.txt  bench.cpp  main.cpp
cp/doc/: cp.tex
cp/include/: pers_segtree.h
lab1/: CMakeLists.txt  main.cpp
lab1/doc/: report.tex
lab1/include/: header.h  sort.h
lab1/src/: benchmark.cpp  main.cpp  test.cpp
lab2/: CMakeLists.txt  benchmark.cpp  main.cpp  new_benchmark.cpp
lab2/doc/: Makefile  report.tex
lab2/doc/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thoughts.tex
lab2/include/: binary_string.h  patricia.h
lab2/src/: binary_string.cpp  patricia.cpp  single_file.cpp
lab2/tests/e2e/: 01.t  02.t  03.t
lab2/tests/unit/: binary_string_test.cpp  patricia_test.cpp
lab3/doc/: report.tex
lab3/doc/src/: conclusion.tex  debug_diary.tex  tests.tex  titlepage.tex
lab4/: CMakeLists.txt  benchmark.cpp  main.cpp  single_file.cpp
lab4/doc/: report.tex
lab4/doc/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thoughts.tex  titlepage.tex
lab4/include/: zfunc.h
lab4/src/: zfunc.cpp
lab5/: CMakeLists.txt  benchmark.cpp  main.cpp  single_file.cpp
lab5/doc/: report.tex
lab5/include/: suffix_tree.h
lab5/src/: suffix_tree.cpp
lab7/: CMakeLists.txt
lab7/doc/: report.tex
lab7/src/: bench.cpp  main.cpp  naive_bench.cpp
lab8/: CMakeLists.txt
lab8/doc/: report.tex
lab8/src/: main.cpp  main_bench.cpp  test.txt  testgen.py
lab9/: CMakeLists.txt  benchmark.cpp  main.cpp
lab9/doc/: report.tex
lab9/include/: graph.h
